--- a/sites/all/themes/s2015/sass/components/_for-att.scss
+++ b/sites/all/themes/s2015/sass/components/_for-att.scss
@@ -239,6 +239,15 @@
     margin-top: 10px;
 }
 
-.vid-prev-row > td {
-    padding-bottom: 20px;
+.vid-prev-row  {
+    
+    &> td {
+        padding-bottom: 20px;
+    }
+
+    a {
+    
+        display:inline-block;
+        margin-bottom:5px; 
+    }
 }
